--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,10 @@
 
     <string name="kec_prompt">Pilih Kecamatan</string>
 
+    <string name="title_activity_profile">Profile</string>
+
+    <!--    PROFIL-->
+    <string name="action_settings">Settings</string>
     <string-array name="dropdown_kec">
         <item>Pilih Kecamatan</item>
         <item>Blimbing</item>
