--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="navigation_view_item_2">Riwayat</string>
     <string name="navigation_view_item_3">Profil</string>
     <string name="navigation_view_item_4">Keluar</string>
+    <string name="navigation_view_item_5">Bantuan</string>
     <string name="openDrawer">Drawer dibuka</string>
     <string name="closeDrawer">Drawer ditutup</string>
 
@@ -35,6 +36,7 @@
 
     <!--    PROFIL-->
     <string name="action_settings">Settings</string>
+    <string name="navigation_view_item_6">Panduan</string>
     <string-array name="dropdown_kec">
         <item>Pilih Kecamatan</item>
         <item>Blimbing</item>
